--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -4,6 +4,7 @@ include ../../mixins/search
 include ../../mixins/pagination
 include ../../mixins/form-change-multi
 include ../../mixins/alert
+include ../../mixins/sort
 
 block main
     +alert-success(5000)
@@ -16,6 +17,9 @@ block main
                     +filter-status(filterStatus)
                 .col-6
                     +search(keyword)
+
+    +sort()
+                        
     .card.mb-3
         .card-header= pageTitle
             .card-body
@@ -27,6 +31,7 @@ block main
                         href=`${prefixAdmin}/products/create`
                         class="btn btn-outline-success"
                         ) + Thêm mới
+
                 table(
                     class="table table-hover table-sm"
                     checkbox-multi
