feat: implement category page similar to product list

--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -20,4 +20,4 @@ block main
                     )
 
             if (product.description)
-                p(class="mb-4")= product.description
+                p(class="mb-4") !{product.description}
