--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -1,5 +1,6 @@
 extends ../../layout/default
 include ../../mixins/alert
+include ../../mixins/select-tree
 
 block main
     h1(class="mb-4")= pageTitle
@@ -21,13 +22,15 @@ block main
                 required
             )
         div(class="form-group")
-            label(for="parent_id") Danh mục cha
-            input(
-                type="text"
-                class="form-control"
-                id="parent_id"
+           label(for="parent_id") Danh mục cha
+            select(
                 name="parent_id"
+                id="parent_id"
+                class="form-control"
             )
+                option(value="") -- Chọn danh mục cha --
+                if(records)
+                    +select-tree(records)
         div(class="form-group")
             label(for="desc") Mô tả
             textarea(
