--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -1,11 +1,10 @@
 extends ../../layout/default
 include ../../mixins/filter-status
 include ../../mixins/search
-include ../../mixins/pagination
 include ../../mixins/alert
 include ../../mixins/form-change-multi
 include ../../mixins/sort
-
+include ../../mixins/table-tree
 block main
     +alert-success(5000)
 
@@ -47,55 +46,7 @@ block main
                             th Trạng thái
                             th Hành động
                     tbody
-                        each product, index in records
-                            tr
-                                td
-                                    input(type="checkbox" name="id" value=product.id)
-                                td= index + 1
-                                td
-                                    img(src=product.thumbnail alt=product.title width="100px" height="auto")
-                                td= product.title
-                                td
-                                    input(
-                                        type="number"
-                                        value=product.position
-                                        style="width: 60px"
-                                        min="1"
-                                        name="position"
-                                    )
-                                td
-                                    if(product.status == "active")
-                                        a(
-                                            href="javascript:;"
-                                            data-status=product.status
-                                            data-id=product.id
-                                            button-change-status
-                                            class="badge badge-success"
-                                        ) Hoạt động
-                                    else
-                                        a(
-                                            href="javascript:;"
-                                            data-status=product.status
-                                            data-id=product.id
-                                            button-change-status
-                                            class="badge badge-danger"
-                                        ) Dừng hoạt động
-                                td
-                                    a(
-                                        href=`${prefixAdmin}/products-category/detail/${product.id}`
-                                        class="btn btn-secondary btn-sm mr-1"
-                                    ) Chi tiết
-                                    a(
-                                        href=`${prefixAdmin}/products-category/edit/${product.id}`
-                                        class="btn btn-warning btn-sm"
-                                    ) Sửa
-                                    button(
-                                        class="btn btn-danger btn-sm ml-1"
-                                        button-delete
-                                        data-id=product.id
-                                    ) Xóa
-
-    +pagination(pagination)
+                        +table-tree(records)
 
     form(
         action=""
