--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -52,7 +52,7 @@ block main
                             tr
                                 td
                                     input(type="checkbox" name="id" value=product.id)
-                                td= index + 1
+                                td #{pagination.limitItems * (pagination.currentPage - 1) + (index + 1)}
                                 td
                                     img(src=product.thumbnail alt=product.title width="100px" height="auto")
                                 td= product.title
