--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -1,5 +1,6 @@
 extends ../../layout/default
 include ../../mixins/alert
+include ../../mixins/select-tree
 
 block main
     +alert-error(5000)
@@ -24,6 +25,16 @@ block main
                 value=product.title
                 required
             )
+        div(class="form-group")
+            label(for="product_category_id") Danh mục
+                select(
+                    name="product_category_id"
+                    id="product_category_id"
+                    class="form-control"
+                )
+                    option(value="") -- Chọn danh mục --
+                    if(category)
+                        +select-tree(category, 1, product.product_category_id)
         div(class="form-group")
             label(for="desc") Mô tả
             textarea(
