feat: add account list and account creation

--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -9,7 +9,7 @@ block main
 
     form(
         action=`${prefixAdmin}/products/create`
-        id="form-create-product"
+        id="form-create.pug-product"
         method="POST"
         enctype="multipart/form-data"
     )
