--- a/views/admin/layout/default.pug
+++ b/views/admin/layout/default.pug
@@ -6,23 +6,26 @@ html
         link(rel="stylesheet", href="/admin/css/style.css")
     body
 
-        include ../partials/header
-            //main
-                   //    .header-spacing
-                   //        block main
-        .body
+        if (role.permissions.length > 0)
+            include ../partials/header
+                //main
+                       //    .header-spacing
+                       //        block main
+            .body
 
-            include ../partials/slider
+                include ../partials/slider
 
-            .main
-                block main
+                .main
+                    block main
 
-    script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
+            script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
+            script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
 
-    // TinyMCE
-    script(src="/tinymce/tinymce.min.js")
-    script(src="/admin/js/tinymce-config.js")
-    // End TinyMCE
+            // TinyMCE
+            script(src="/tinymce/tinymce.min.js")
+            script(src="/admin/js/tinymce-config.js")
+            // End TinyMCE
 
-    script(src="/admin/js/script.js")
+            script(src="/admin/js/script.js")
+        else
+            div ban khong co quyen truy cap
