--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -6,60 +6,63 @@ include ../../mixins/form-change-multi
 include ../../mixins/sort
 include ../../mixins/table-tree
 block main
-    +alert-success(5000)
 
-    .card.mb-3
-        .card-header Bộ lọc và tìm kiếm
-        .card-body
-            .row
-                .col-6
-                    +filter-status(filterStatus)
-                .col-6
-                    +search(keyword)
+    if (role.permissions.includes("products-category_view"))
+        +alert-success(5000)
 
-    +sort()
-
-    .card.mb-3
-        .card-header= pageTitle
+        .card.mb-3
+            .card-header Bộ lọc và tìm kiếm
             .card-body
                 .row
-                    .col-8
-                         +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
-                    .col-4
-                        a(
-                            href=`${prefixAdmin}/products-category/create`
-                            class="btn btn-outline-success"
-                        ) + Thêm mới
+                    .col-6
+                        +filter-status(filterStatus)
+                    .col-6
+                        +search(keyword)
 
-                table(
-                    class="table table-hover table-sm"
-                    checkbox-multi
-                )
-                    thead
-                        tr
-                            th
-                                input(type="checkbox" name="checkall")
-                            th STT
-                            th Hình ảnh
-                            th Tiêu đề
-                            th Vị trí
-                            th Trạng thái
-                            th Hành động
-                    tbody
-                        +table-tree(records)
+        +sort()
 
-    form(
-        action=""
-        method="POST"
-        id="form-change-status"
-        data-path=`${prefixAdmin}/products-category/change-status`
-    )
+        .card.mb-3
+            .card-header= pageTitle
+                .card-body
+                    .row
+                        .col-8
+                             +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
+                        .col-4
+                            if (role.permissions.includes("products-category_create"))
+                                a(
+                                    href=`${prefixAdmin}/products-category/create`
+                                    class="btn btn-outline-success"
+                                ) + Thêm mới
 
-    form(
-        action=""
-        method="POST"
-        id="form-delete-item"
-        data-path=`${prefixAdmin}/products-category/delete`
-    )
+                    table(
+                        class="table table-hover table-sm"
+                        checkbox-multi
+                    )
+                        thead
+                            tr
+                                th
+                                    input(type="checkbox" name="checkall")
+                                th STT
+                                th Hình ảnh
+                                th Tiêu đề
+                                th Vị trí
+                                th Trạng thái
+                                th Hành động
+                        tbody
+                            +table-tree(records)
 
-    script(src="/admin/js/product.js")
+        form(
+            action=""
+            method="POST"
+            id="form-change-status"
+            data-path=`${prefixAdmin}/products-category/change-status`
+        )
+
+        form(
+            action=""
+            method="POST"
+            id="form-delete-item"
+            data-path=`${prefixAdmin}/products-category/delete`
+        )
+
+        script(src="/admin/js/product.js")
