--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -7,110 +7,126 @@ include ../../mixins/alert
 include ../../mixins/sort
 
 block main
-    +alert-success(5000)
+    if (role.permissions.includes("products_view"))
+        +alert-success(5000)
 
-    .card.mb-3
-        .card-header Bộ lọc và tìm kiếm
-        .card-body
-            .row
-                .col-6
-                    +filter-status(filterStatus)
-                .col-6
-                    +search(keyword)
-
-    +sort()
-                        
-    .card.mb-3
-        .card-header= pageTitle
+        .card.mb-3
+            .card-header Bộ lọc và tìm kiếm
             .card-body
                 .row
-                    .col-8
-                        +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-                    .col-4
-                        a(
-                        href=`${prefixAdmin}/products/create`
-                        class="btn btn-outline-success"
-                        ) + Thêm mới
+                    .col-6
+                        +filter-status(filterStatus)
+                    .col-6
+                        +search(keyword)
 
-                table(
-                    class="table table-hover table-sm"
-                    checkbox-multi
-                )
-                    thead
-                        tr
-                            th
-                                input(type="checkbox" name="checkall")
-                            th STT
-                            th Hình ảnh
-                            th Tiêu đề
-                            th Giá
-                            th Vị trí
-                            th Trạng thái
-                            th Hành động
-                    tbody
-                        each product, index in products
+        +sort()
+
+        .card.mb-3
+            .card-header= pageTitle
+                .card-body
+                    .row
+                        .col-8
+                            +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+                        .col-4
+                            if (role.permissions.includes("products_create"))
+                                a(
+                                href=`${prefixAdmin}/products/create`
+                                class="btn btn-outline-success"
+                                ) + Thêm mới
+
+                    table(
+                        class="table table-hover table-sm"
+                        checkbox-multi
+                    )
+                        thead
                             tr
-                                td
-                                    input(type="checkbox" name="id" value=product.id)
-                                td #{pagination.limitItems * (pagination.currentPage - 1) + (index + 1)}
-                                td
-                                    img(src=product.thumbnail alt=product.title width="100px" height="auto")
-                                td= product.title
-                                td #{product.price}$
-                                td
-                                    input(
-                                        type="number"
-                                        value=product.position
-                                        style="width: 60px"
-                                        min="1"
-                                        name="position"
-                                    )
-                                td
-                                    if(product.status == "active")
+                                th
+                                    input(type="checkbox" name="checkall")
+                                th STT
+                                th Hình ảnh
+                                th Tiêu đề
+                                th Giá
+                                th Vị trí
+                                th Trạng thái
+                                th Hành động
+                        tbody
+                            each product, index in products
+                                tr
+                                    td
+                                        input(type="checkbox" name="id" value=product.id)
+                                    td #{pagination.limitItems * (pagination.currentPage - 1) + (index + 1)}
+                                    td
+                                        img(src=product.thumbnail alt=product.title width="100px" height="auto")
+                                    td= product.title
+                                    td #{product.price}$
+                                    td
+                                        input(
+                                            type="number"
+                                            value=product.position
+                                            style="width: 60px"
+                                            min="1"
+                                            name="position"
+                                        )
+                                    td
+                                        if (role.permissions.includes("products_edit"))
+                                            if(product.status == "active")
+                                                a(
+                                                    href="javascript:;"
+                                                    data-status=product.status
+                                                    data-id=product.id
+                                                    button-change-status
+                                                    class="badge badge-success"
+                                                    ) Hoạt động
+                                            else
+                                                a(
+                                                    href="javascript:;"
+                                                    data-status=product.status
+                                                    data-id=product.id
+                                                    button-change-status
+                                                    class="badge badge-danger"
+                                                    ) Dừng hoạt động
+                                        else
+                                            if(product.status == "active")
+                                                div(
+
+                                                    class="badge badge-success"
+                                                ) Hoạt động
+                                            else
+                                                div(
+
+                                                    class="badge badge-danger"
+                                                ) Dừng hoạt động
+                                    td
                                         a(
-                                            href="javascript:;"
-                                            data-status=product.status
-                                            data-id=product.id
-                                            button-change-status
-                                            class="badge badge-success"
-                                            ) Hoạt động
-                                    else
-                                        a(
-                                            href="javascript:;"
-                                            data-status=product.status
-                                            data-id=product.id
-                                            button-change-status
-                                            class="badge badge-danger"
-                                            ) Dừng hoạt động
-                                td
-                                    a(
-                                        href=`${prefixAdmin}/products/detail/${product.id}`
-                                        class="btn btn-secondary btn-sm mr-1"
-                                    ) Chi tiết
-                                    a(
-                                        href=`${prefixAdmin}/products/edit/${product.id}`
-                                        class="btn btn-warning btn-sm"
-                                    ) Sửa
-                                    button(
-                                        class="btn btn-danger btn-sm ml-1"
-                                        button-delete
-                                        data-id=product.id
-                                        ) Xóa
-    +pagination(pagination)
+                                            href=`${prefixAdmin}/products/detail/${product.id}`
+                                            class="btn btn-secondary btn-sm mr-1"
+                                        ) Chi tiết
+                                        if (role.permissions.includes("products_edit"))
+                                            a(
+                                                href=`${prefixAdmin}/products/edit/${product.id}`
+                                                class="btn btn-warning btn-sm"
+                                            ) Sửa
+                                        if (role.permissions.includes("products_delete"))
+                                            button(
+                                                class="btn btn-danger btn-sm ml-1"
+                                                button-delete
+                                                data-id=product.id
+                                                ) Xóa
+        +pagination(pagination)
 
-    form(
-        action=""
-        method="POST"
-        id="form-change-status"
-        data-path=`${prefixAdmin}/products/change-status`
-    )
+        form(
+            action=""
+            method="POST"
+            id="form-change-status"
+            data-path=`${prefixAdmin}/products/change-status`
+        )
 
-    form(
-        action=""
-        method="POST"
-        id="form-delete-item"
-        data-path=`${prefixAdmin}/products/delete`
-    )
+        form(
+            action=""
+            method="POST"
+            id="form-delete-item"
+            data-path=`${prefixAdmin}/products/delete`
+        )
 
 
-    script(src="/admin/js/product.js")
+        script(src="/admin/js/product.js")
