--- a/views/admin/pages/roles/create.pug
+++ b/views/admin/pages/roles/create.pug
@@ -3,34 +3,35 @@ include ../../mixins/alert
 
 
 block main
-    +alert-success(5000)
+    if (role.permissions.includes("roles_create"))
+        +alert-success(5000)
 
-    h1(class="mb-4")= pageTitle
+        h1(class="mb-4")= pageTitle
 
-    form(
-        action=`${prefixAdmin}/roles/create`
-        method="POST"
-    )
-        div(class="form-group")
-            label(for="title") Tiêu đề
-            input(
-                type="text"
-                class="form-control"
-                id="title"
-                name="title"
-                required
-            )
-        div(class="form-group")
-            label(for="desc") Mô tả
-            input(
-                type="text"
-                class="form-control"
-                id="desc"
-                name="description"
-                required
-            )
-        div(class="form-group")
-            button(
-                type="submit"
-                class="btn btn-primary"
-            ) Tạo mới
+        form(
+            action=`${prefixAdmin}/roles/create`
+            method="POST"
+        )
+            div(class="form-group")
+                label(for="title") Tiêu đề
+                input(
+                    type="text"
+                    class="form-control"
+                    id="title"
+                    name="title"
+                    required
+                )
+            div(class="form-group")
+                label(for="desc") Mô tả
+                input(
+                    type="text"
+                    class="form-control"
+                    id="desc"
+                    name="description"
+                    required
+                )
+            div(class="form-group")
+                button(
+                    type="submit"
+                    class="btn btn-primary"
+                ) Tạo mới
