--- a/views/admin/pages/roles/index.pug
+++ b/views/admin/pages/roles/index.pug
@@ -1,46 +1,50 @@
 extends ../../layout/default
 
 block main
-    h1= pageTitle
+    if (role.permissions.includes("roles_view"))
+        h1= pageTitle
 
-    .card.mb-3
-        .card-header Danh sách
-            .card-body
-                .row.mb-4
-                    .col-8
-                    .col-4
-                        a(
-                            href=`${prefixAdmin}/roles/create`
-                            class="btn btn-outline-success"
-                        ) + Thêm mới
+        .card.mb-3
+            .card-header Danh sách
+                .card-body
+                    .row.mb-4
+                        .col-8
+                        .col-4
+                            if (role.permissions.includes("roles_create"))
+                                a(
+                                    href=`${prefixAdmin}/roles/create`
+                                    class="btn btn-outline-success"
+                                ) + Thêm mới
 
-                table(
-                    class="table table-hover table-sm"
-                )
-                    thead
-                        tr
-                            th STT
-                            th Nhóm quyền
-                            th Mô tả ngắn
-                            th Hành động
-                    tbody
-                        if(records.length > 0)
-                            each item, index in records
-                                tr
-                                    td #{index + 1}
-                                    td #{item.title}
-                                    td #{item.description}
-                                    td
-                                        a(
-                                            href=`${prefixAdmin}/roles/detail/${item.id}`
-                                            class="btn btn-secondary btn-sm mr-1"
-                                        ) Chi tiết
-                                        a(
-                                            href=`${prefixAdmin}/roles/edit/${item.id}`
-                                            class="btn btn-warning btn-sm"
-                                        ) Sửa
-                                        button(
-                                            class="btn btn-danger btn-sm ml-1"
-                                            button-delete
-                                            data-id=item.id
-                                        ) Xóa
+                    table(
+                        class="table table-hover table-sm"
+                    )
+                        thead
+                            tr
+                                th STT
+                                th Nhóm quyền
+                                th Mô tả ngắn
+                                th Hành động
+                        tbody
+                            if(records.length > 0)
+                                each item, index in records
+                                    tr
+                                        td #{index + 1}
+                                        td #{item.title}
+                                        td #{item.description}
+                                        td
+                                            a(
+                                                href=`${prefixAdmin}/roles/detail/${item.id}`
+                                                class="btn btn-secondary btn-sm mr-1"
+                                            ) Chi tiết
+                                            if (role.permissions.includes("roles_edit"))
+                                                a(
+                                                    href=`${prefixAdmin}/roles/edit/${item.id}`
+                                                    class="btn btn-warning btn-sm"
+                                                ) Sửa
+                                            if (role.permissions.includes("roles_delete"))
+                                                button(
+                                                    class="btn btn-danger btn-sm ml-1"
+                                                    button-delete
+                                                    data-id=item.id
+                                                ) Xóa
