--- a/views/admin/pages/roles/permissions.pug
+++ b/views/admin/pages/roles/permissions.pug
@@ -2,124 +2,153 @@ extends ../../layout/default
 include ../../mixins/alert
 
 block main
-    h1= pageTitle
 
-    +alert-success(5000)
-    if(records)
-        div(data-records=records)
+    if (role.permissions.includes("roles_permissions"))
+        h1= pageTitle
 
-        div(class="text-right")
-            button(
-                type="submit"
-                class="btn btn-primary mb-3"
-                button-submit
-            ) Cập nhật
+        +alert-success(5000)
+        if(records)
+            div(data-records=records)
 
-            table(
-                class="table table-hover table-sm"
-                table-permissions
-            )
-                thead
-                    tr
-                        th Tính năng
-                        each item in records
-                            th(class="text-center") #{item.title}
-                tbody
-                    tr(data-name="id" class="d-none")
-                        td
-                        each item in records
-                            td(class="text-center")
-                                input(type="text" value=item.id)
+            div(class="text-right")
+                button(
+                    type="submit"
+                    class="btn btn-primary mb-3"
+                    button-submit
+                ) Cập nhật
 
-                    //  Danh mục sản phẩm
-                    tr
-                        td(colspan="4" class="text-left")
-                            b Danh mục sản phẩm
-                    tr(data-name="product-category_view")
-                        td Xem
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="products-category_create")
-                        td Thêm mới
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="products-category_edit")
-                        td Chỉnh sửa
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="products-category_delete")
-                        td Xóa
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
+                table(
+                    class="table table-hover table-sm"
+                    table-permissions
+                )
+                    thead
+                        tr
+                            th Tính năng
+                            each item in records
+                                th(class="text-center") #{item.title}
+                    tbody
+                        tr(data-name="id" class="d-none")
+                            td
+                            each item in records
+                                td(class="text-center")
+                                    input(type="text" value=item.id)
 
-                    // Sản phẩm
-                    tr
-                        td(colspan="4" class="text-left")
-                            b Sản phẩm
-                    tr(data-name="product_view")
-                        td Xem
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="products_create")
-                        td Thêm mới
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="products_edit")
-                        td Chỉnh sửa
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="products_delete")
-                        td Xóa
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
+                        //  Danh mục sản phẩm
+                        tr
+                            td(colspan="4" class="text-left")
+                                b Danh mục sản phẩm
+                        tr(data-name="products-category_view")
+                            td Xem
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="products-category_create")
+                            td Thêm mới
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="products-category_edit")
+                            td Chỉnh sửa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="products-category_delete")
+                            td Xóa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
 
-                    // Nhóm quyền
-                    tr
-                        td(colspan="4" class="text-left")
-                            b Nhóm quyền
-                    tr(data-name="roles_view")
-                        td Xem
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="roles_create")
-                        td Thêm mới
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="roles_edit")
-                        td Chỉnh sửa
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="roles_delete")
-                        td Xóa
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-                    tr(data-name="roles_permissions")
-                        td Phân quyền
-                        each item in records
-                            td(class="text-center")
-                                input(type="checkbox")
-    form(
-        id="form-change-permissions"
-        method="POST"
-        action=`${prefixAdmin}/roles/permissions?_method=PATCH`
-        class="d-none"
-    )
-        div(class="form-group")
-            input(
-                type="text"
-                class="form-control"
-                name="permissions"
-            )
-    script(src="/admin/js/roles.js")
+                        // Sản phẩm
+                        tr
+                            td(colspan="4" class="text-left")
+                                b Sản phẩm
+                        tr(data-name="products_view")
+                            td Xem
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="products_create")
+                            td Thêm mới
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="products_edit")
+                            td Chỉnh sửa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="products_delete")
+                            td Xóa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+
+                        // Nhóm quyền
+                        tr
+                            td(colspan="4" class="text-left")
+                                b Nhóm quyền
+                        tr(data-name="roles_view")
+                            td Xem
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="roles_create")
+                            td Thêm mới
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="roles_edit")
+                            td Chỉnh sửa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="roles_delete")
+                            td Xóa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="roles_permissions")
+                            td Phân quyền
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+
+
+                        // Account
+                        tr
+                            td(colspan="4" class="text-left")
+                                b Danh sach tai khoan
+                        tr(data-name="accounts_view")
+                            td Xem
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="accounts_create")
+                            td Thêm mới
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="accounts_edit")
+                            td Chỉnh sửa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+                        tr(data-name="accounts_delete")
+                            td Xóa
+                            each item in records
+                                td(class="text-center")
+                                    input(type="checkbox")
+
+        form(
+            id="form-change-permissions"
+            method="POST"
+            action=`${prefixAdmin}/roles/permissions?_method=PATCH`
+            class="d-none"
+        )
+            div(class="form-group")
+                input(
+                    type="text"
+                    class="form-control"
+                    name="permissions"
+                )
+        script(src="/admin/js/roles.js")
