--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -65,4 +65,4 @@ block main
             data-path=`${prefixAdmin}/products-category/delete`
         )
 
-        script(src="/admin/js/product.js")
+        script(src="/admin/js/products.js")
