--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -35,4 +35,4 @@ block main
         class="btn btn-warning btn-sm"
     ) Chỉnh sửa
 
-    script(src="/admin/js/product.js")
+    script(src="/admin/js/products.js")
