--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -131,4 +131,4 @@ block main
                     class="btn btn-primary"
                 ) Cập nhật
 
-        script(src="/admin/js/product.js")
+        script(src="/admin/js/products.js")
