--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -49,7 +49,8 @@ block main
                                 th Giá
                                 th Vị trí
                                 th Trạng thái
-                                th Nguoi tao
+                                th Người tạo
+                                th Người cập nhật
                                 th Hành động
                         tbody
                             each product, index in products
@@ -70,9 +71,6 @@ block main
                                             name="position"
                                         )
                                     td
-                                        p #{product.accountFullName}
-                                        +formatDate(product.createdBy.createdAt)
-                                    td
                                         if (role.permissions.includes("products_edit"))
                                             if(product.status == "active")
                                                 a(
@@ -81,7 +79,7 @@ block main
                                                     data-id=product.id
                                                     button-change-status
                                                     class="badge badge-success"
-                                                    ) Hoạt động
+                                                ) Hoạt động
                                             else
                                                 a(
                                                     href="javascript:;"
@@ -89,7 +87,7 @@ block main
                                                     data-id=product.id
                                                     button-change-status
                                                     class="badge badge-danger"
-                                                    ) Dừng hoạt động
+                                                ) Dừng hoạt động
                                         else
                                             if(product.status == "active")
                                                 div(
@@ -101,6 +99,14 @@ block main
 
                                                     class="badge badge-danger"
                                                 ) Dừng hoạt động
+                                    td
+                                        p #{product.accountFullName}
+                                        +formatDate(product.createdBy.createdAt)
+                                    td
+                                        - const updateBy = product.updatedBy[product.updatedBy.length - 1]
+                                        if (updateBy)
+                                            p #{updateBy.accountFullName}
+                                            +formatDateTime(updateBy.updatedAt)
                                     td
                                         a(
                                             href=`${prefixAdmin}/products/detail/${product.id}`
@@ -134,4 +140,4 @@ block main
         )
 
 
-        script(src="/admin/js/product.js")
+        script(src="/admin/js/products.js")
