--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -1,23 +1,50 @@
 extends ../../layout/default
+include ../../mixins/alert
 
 block main
+    +alert-success(2000)
+
     h1(class="mb-4")= pageTitle
     .container.my-3
         .col-12
-            if (product.title)
-                h1(class="mb-4")= product.title
-            if (product.price)
-                div(class="mb-4") Giá <b>#{product.price}$<b/>
-            if (product.discountPercentage)
-                div(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%<b/>
-            if (product.stock)
-                div(class="mb-4") Còn lại: <b>#{product.stock}<b/>
-            if (product.thumbnail)
-                div(class="mb-4")
-                    img(
-                        src=product.thumbnail
-                        style="width: 100px"
+            .row
+                .col-6
+                    if (product.thumbnail)
+                        div(class="mb-4")
+                            img(
+                                src=product.thumbnail
+                                style="width: 100px"
+                            )
+                    if(product.category)
+                        div(class="inner-category")
+                            span Danh mục:
+                            a(href=`/products/${product.category.slug}`) #{product.category.title}
+                    if(product.priceNew)
+                        div(class="inner-price-new") #{product.priceNew} $
+                .col-6
+                    if (product.title)
+                        h1(class="mb-4")= product.title
+                    if (product.price)
+                        div(class="mb-4") Giá <b>#{product.price}$<b/>
+                    if (product.discountPercentage)
+                        div(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%<b/>
+                    if (product.stock)
+                        div(class="mb-4") Còn lại: <b>#{product.stock}<b/>
+                    form(
+                        action=`/cart/add/${product.id}`
+                        method="POST"
                     )
-
+                        input(
+                            class="form-control mb-2"
+                            type="number"
+                            name="quantity"
+                            value="1"
+                            min="1"
+                            max=product.stock
+                        )
+                        button(
+                            type="submit"
+                            class="btn btn-success btn-block"
+                        ) Thêm vào giỏ hàng
             if (product.description)
                 p(class="mb-4") !{product.description}
