--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,23 +1,11 @@
 extends ../../layout/default
+include ../../mixins/product-layout
 
 block main
     .container.my-3
         .row
             .col-12
                 .box-head
-                    h2.inner-title Danh sách sản phẩm
+                    h2.inner-title #{pageTitle}
         .row
-            each product in products
-                .col-4.mb-3
-                    .card
-                        img.card-img-top(
-                            src=product.thumbnail ,
-                            alt=product.title
-                            )
-                        .card-body
-                            a(href=`/products/${product.slug}`)
-                                h3.card-title #{product.title}
-                        ul.list-group.list-group-flush
-                            li.list-group-item New Price #{product.priceNew}$
-                            li.list-group-item Old Price #{product.price}$
-                            li.list-group-item Discount -#{product.discountPercentage}%
+            +product-grid(products)
