feat(chat): add middleware and create collection chat

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -36,8 +36,10 @@ header.header
                             a(href="/cart") Giỏ hàng (#{miniCart ? miniCart.totalQuantity : "0"})
                         if (user)
                             li #{user.fullName}
-                                li
-                                    a(href="/user/logout") Đăng xuất
+                            li
+                                a(href="/user/logout") Đăng xuất
+                            li
+                                a(href="/chat") Chat
                         else
                             li
                                 a(href="/user/login") Đăng nhập
