feat(chat): chat multi img

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,6 +178,40 @@
     overflow-y: auto;
 }
 
+.chat .inner-body .inner-images img {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+    background: #efefef;
+    padding: 10px;
+    margin: 0 5px 5px 0;
+    border-radius: 5px;
+}
+
+.chat .inner-body .inner-outgoing .inner-images {
+    margin-left: auto;
+}
+
+.chat .inner-preview-images .input-container {
+    display: none;
+}
+
+.chat .inner-preview-images .label-container {
+    display: none;
+}
+
+.chat .inner-preview-images .image-preview {
+    height: auto;
+    padding: 0;
+    border-radius: 0;
+}
+
+.chat .inner-preview-images .image-preview-item {
+    width: 90px;
+    background-size: contain;
+}
+
+
 .chat .inner-name {
     font-weight: bold;
 }
@@ -192,6 +226,8 @@
 
 .chat .inner-outgoing {
     display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .chat .inner-outgoing .inner-content {
@@ -233,6 +269,7 @@
     padding: 0 10px;
     cursor: pointer;
 }
+
 
 /* emoji */
 .tooltip {
