--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -4,7 +4,7 @@ html
         title #{pageTitle}
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
-        link(rel="stylesheet", href="https://unpkg.com/file-upload-with-preview/dist/style.css")
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/file-upload-with-preview/dist/style.css")
         link(rel="stylesheet", href="/css/style.css")
     body
         include ../partials/header
@@ -25,7 +25,7 @@ html
     script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
 
     // file-upload-with-preview
-    script(src="https://unpkg.com/file-upload-with-preview/dist/index.iife.js")
+    script(src="https://cdn.jsdelivr.net/npm/file-upload-with-preview/dist/index.iife.js")
 
     script(type="module" src="/js/chat.js")
 
