feat(ui): display user

--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -2,6 +2,9 @@ extends ../../layout/default
 
 block main
     .container.my-3
+
+        include ../../partials/list-btn-users
+
         .row
             .col-12
                 h1 Chat
