--- a/public/css/style.css
+++ b/public/css/style.css
@@ -323,3 +323,32 @@
     100% { opacity: 0.2; }
 }
 /* End box typing */
+
+/* box-user */
+.box-user {
+    display: inline-flex;
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 30px;
+}
+
+.box-user .inner-avatar {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    background: #f2f2f2;
+    margin-right: 10px;
+}
+
+.box-user .inner-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.box-user .inner-info {
+
+}
+/* End box-user */
