feat: add friend

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -349,6 +349,24 @@
 }
 
 .box-user .inner-info {
+    flex: 1;
+}
 
+.box-user .inner-info .inner-name {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 3px;
+}
+
+.box-user [btn-cancel-friend] {
+    display: none;
+}
+
+.box-user.add [btn-add-friend] {
+    display: none;
+}
+
+.box-user.add [btn-cancel-friend] {
+    display: inline-block;
 }
 /* End box-user */
