--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -33,6 +33,6 @@ html
     // preview img
     script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.js")
 
-    script(type="module" src="/js/chat.js")
-
     script(src="/js/script.js")
+
+    block script
