--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -47,3 +47,6 @@ block main
                                 i.fa-solid.fa-paper-plane
     div(class="tooltip" role="tooltip")
         emoji-picker
+
+    block script
+        script(type="module" src="/js/chat.js")
